# ChillBot

./: .env.example  .gitignore  LICENSE  README.md  agent.py  config.py  pyproject.toml  requirements.txt
docs/: api_reference.md  architecture.md  setup_guide.md
scripts/: test_book_shortcut.py  test_formatters.py  test_mcp_servers.py
servers/: books_server.py  fun_server.py  info_server.py  motivation_server.py  movie_server.py  weather_server.py
tests/: test_books.py  test_movies.py  test_weather.py
utils/: cli.py  helpers.py  llm.py  logger.py  mcp_client.py  parser.py  prompts.py  reflection.py
